vcs/specs/parser/fail/modules/invalid_cog.vr
// @test: parse-fail
// @level: L0
// @tags: parser, modules, cog, error
// @description: Test invalid cog keyword usage without proper context
// @expected-error: E018

cog;
